# PythonIntermediarioPyLadies

./: ComCompewhesions.py  Ex1.py  SemComprehensions.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.csv  ex8.py  pyproject.toml
